Rename endpoints and entities
