# core/store.go
@@ -5,11 +5,11 @@ import "image"
 type Store interface {
 	Close()
 	GetTestList() []string
-	GetTest(string) (Test, error)
-	GetLastTest(projectID, branch, target, browser string) Test
+	GetTest(string) (Result, error)
+	GetLastTest(projectID, branch, target, browser string) Result
 	GetMask(string) ([]image.Rectangle, error)
 	StoreMask(masks []image.Rectangle) (string, error)
-	StoreTest(Test) error
+	StoreTest(Result) error
 	GetImage(string) (image.Image, error)
 	StoreImage(image.Image) (string, error)
 	GetBaseImageID(projectID, branch, target, browser string) (string, error)
